--- a/public/css/pages.scss
+++ b/public/css/pages.scss
@@ -22,6 +22,13 @@
   }
 }
 
+a.next                           {
+                                    margin-top:       53px;
+                                    margin-left:      -70px;
+                                    font-style:       italic;
+                                    font-family:      'Nickainley-Normal', 'script';
+}
+
 .paper                            {
                                     min-height:       calc(100vh - 242px);
                                     text-align:       center;
